UI adjustments in activity_intro and slide_layout

--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -8,17 +8,17 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="541dp">
+        android:layout_height="545dp">
 
     </android.support.v4.view.ViewPager>
 
     <LinearLayout
         android:id="@+id/dotsLayout"
         android:layout_width="match_parent"
-        android:layout_height="27dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="0dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal"></LinearLayout>
 
