--- a/app/src/main/res/layout/musicrowlayout.xml
+++ b/app/src/main/res/layout/musicrowlayout.xml
@@ -6,15 +6,16 @@
     <LinearLayout
 
         android:layout_width="match_parent"
-        android:layout_height="75dp"
+        android:layout_height="220px"
         android:orientation="horizontal">
 
         <ImageView
+            android:layout_marginLeft="100px"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:id="@+id/musicPhoto"
-            android:layout_width="65dp"
-            android:layout_height="65dp" />
+            android:layout_width="120px"
+            android:layout_height="120px" />
 
         <TextView
             android:id="@+id/musicName"
