--- a/app/src/main/res/layout/activity_music.xml
+++ b/app/src/main/res/layout/activity_music.xml
@@ -24,10 +24,29 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="5dp"
-            android:orientation="horizontal"><![CDATA[
-            >
+            android:orientation="horizontal">
 
-        ]]></LinearLayout>
+            <ImageButton
+                android:id="@+id/imageButton4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/photobtn" />
+
+            <ImageButton
+                android:id="@+id/imageButton5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/music" />
+
+            <ImageButton
+                android:id="@+id/imageButton6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/diary" />
+        </LinearLayout>
 
         <View
             android:background="#f2eff4"
