--- a/app/src/main/res/layout/activity_music.xml
+++ b/app/src/main/res/layout/activity_music.xml
@@ -13,7 +13,7 @@
         <ImageView
             android:id="@+id/topTitleholder"
             android:layout_width="match_parent"
-            android:layout_height="180px"
+            android:layout_height="70sp"
             android:src="@drawable/toptitleyellow" />
 
         <LinearLayout
@@ -55,7 +55,8 @@
             android:orientation="vertical"
             android:id="@+id/listViewMusics"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10sp">
         </ListView>
     </LinearLayout>
 
