--- a/app/src/main/res/layout/musicrowlayout.xml
+++ b/app/src/main/res/layout/musicrowlayout.xml
@@ -10,7 +10,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_marginLeft="100px"
+            android:layout_marginLeft="15sp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:id="@+id/musicPhoto"
