--- a/app/src/main/res/layout/slide_layout.xml
+++ b/app/src/main/res/layout/slide_layout.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="150dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
