--- a/app/src/main/res/layout/activity_dairy.xml
+++ b/app/src/main/res/layout/activity_dairy.xml
@@ -11,7 +11,7 @@
   <ImageView
       android:id="@+id/topTitleholder"
       android:layout_width="match_parent"
-      android:layout_height="70sp"
+      android:layout_height="180px"
       android:layout_margin="0dp"
       android:src="@drawable/toptitleyellow" />
 
