--- a/app/src/main/res/layout/activity_music.xml
+++ b/app/src/main/res/layout/activity_music.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,7 +13,7 @@
         <ImageView
             android:id="@+id/topTitleholder"
             android:layout_width="match_parent"
-            android:layout_height="70sp"
+            android:layout_height="180px"
             android:src="@drawable/toptitleyellow" />
 
         <LinearLayout
@@ -56,8 +56,10 @@
             android:id="@+id/listViewMusics"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10sp">
+            android:layout_marginTop="20sp"
+            android:divider="@null"
+            android:dividerHeight="0dp">
         </ListView>
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
